initial escrow implementation and changes to config

--- a/stunnel/buyer.conf
+++ b/stunnel/buyer.conf
@@ -1,13 +1,16 @@
 ;verify the certificate against the trusted certificate
 verify = 4
-CAfile = verifiedcert.pem
+CAfile = seller.pem
 
-pid = /tmp/stunnel.pid
-debug = syslog.debug
+;pid = /tmp/stunnel.pid
+debug = 7
 fips = no
 
 client = yes
 
 [section]
-accept  = 33308
-connect = 33309
+accept = 33308 
+connect = 33309 
+ciphers = AES128-SHA
+sslVersion = SSLv3
+
