--- a/stunnel/seller.conf
+++ b/stunnel/seller.conf
@@ -1,10 +1,14 @@
 cert = seller.pem
 key = seller.key
+CAfile = seller.pem
 
-pid = /tmp/stunnel2.pid
-debug = syslog.debug
+;pid = /tmp/stunnel2.pid
+debug = 7
 fips = no
-
+;verify = 4
 [section]
-accept  = 33310
-connect = 3128
+accept = 33310
+connect = 109.169.23.122:3128
+ciphers = AES128-SHA
+sslVersion = SSLv3
+
